--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,6 +7,23 @@
   "isShellCommand": true,
 
   "configurations": [
+    
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Mocha Tests",
+      "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
+      "console": "integratedTerminal",
+      "args": [
+        "-u",
+        "tdd",
+        "--timeout",
+        "999999",
+        "--colors",
+        "${workspaceFolder}/test"
+      ],
+      "internalConsoleOptions": "openOnSessionStart"
+    },
     {
       "type": "node",
       "request": "launch",
