--- a/package.json
+++ b/package.json
@@ -4,18 +4,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.2.1",
     "moment": "^2.22.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "request": "^2.85.0",
     "request-promise-native": "^1.0.5",
     "winston": "^2.4.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "mocha": "^5.1.1",
+    "should": "^13.2.1",
+    "supertest": "^3.0.0"
+  }
 }
