--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "jsonwebtoken": "^8.2.1",
     "moment": "^2.22.1",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
+    "passport-http-bearer": "^1.0.1",
     "request": "^2.85.0",
     "request-promise-native": "^1.0.5",
     "winston": "^2.4.2"
