face signin-signout, navbar

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,10 +13,11 @@
       "request": "launch",
       "name": "Mocha Tests",
       "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
-      "console": "integratedTerminal",
+      // "console": "integratedTerminal",
       "args": [
-        "-u",
-        "tdd",
+        // "-u",
+        // "tdd",
+        "--full-trace",
         "--timeout",
         "999999",
         "--colors",
