--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --full-trace"
+    "test": "mocha --reporter spec"
   },
   "author": "",
   "license": "ISC",
